parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> p1 p2 p3 principal
Rule 2     p1 -> empty
Rule 3     p1 -> clases p1
Rule 4     p2 -> empty
Rule 5     p2 -> funcion p2
Rule 6     p3 -> empty
Rule 7     p3 -> variables p3
Rule 8     principal -> PRINCIPAL pr1 ID parametros BIZQ pr2 BDER
Rule 9     pr1 -> tiposimple
Rule 10    pr1 -> VACIO
Rule 11    pr2 -> pr21 pr22
Rule 12    pr21 -> empty
Rule 13    pr21 -> estatuto pr21
Rule 14    pr22 -> empty
Rule 15    pr22 -> RETORNA expresion PUNTOYCOMA
Rule 16    tipo -> ENTERO
Rule 17    tipo -> DECIMAL
Rule 18    tipo -> TEXTO
Rule 19    tipo -> ID
Rule 20    variables -> tipo v1 PUNTOYCOMA
Rule 21    v1 -> ID v2
Rule 22    v2 -> empty
Rule 23    v2 -> IGUAL valordeclaracion v6
Rule 24    v2 -> v3
Rule 25    v2 -> CIZQ CTEENT CDER v4
Rule 26    v3 -> COMA v1
Rule 27    v4 -> v6
Rule 28    v4 -> IGUAL CIZQ valordeclaracion v5 CDER v6
Rule 29    v5 -> empty
Rule 30    v5 -> COMA valordeclaracion v5
Rule 31    v6 -> empty
Rule 32    v6 -> v3
Rule 33    valordeclaracion -> CTEENT
Rule 34    valordeclaracion -> CTEDEC
Rule 35    valordeclaracion -> CTETEXTO
Rule 36    valor -> valordeclaracion
Rule 37    valor -> ID va1
Rule 38    va1 -> empty
Rule 39    va1 -> PIZQ expresion va2 PDER
Rule 40    va1 -> CIZQ CTEENT CDER va3
Rule 41    va1 -> va4
Rule 42    va2 -> empty
Rule 43    va2 -> COMA expresion va2
Rule 44    va3 -> empty
Rule 45    va3 -> va4
Rule 46    va4 -> PUNTO ID va5
Rule 47    va5 -> empty
Rule 48    va5 -> PIZQ expresion va2 PDER
Rule 49    tiposimple -> ENTERO
Rule 50    tiposimple -> DECIMAL
Rule 51    tiposimple -> TEXTO
Rule 52    parametros -> PIZQ pa1 PDER
Rule 53    pa1 -> empty
Rule 54    pa1 -> tiposimple pa2 ID pa3
Rule 55    pa2 -> empty
Rule 56    pa2 -> AMP
Rule 57    pa3 -> empty
Rule 58    pa3 -> COMA pa1
Rule 59    llamarfunmet -> ID ll1 PIZQ ll2 PDER PUNTOYCOMA
Rule 60    ll1 -> empty
Rule 61    ll1 -> PUNTO ID
Rule 62    ll2 -> empty
Rule 63    ll2 -> expresion ll3
Rule 64    ll3 -> empty
Rule 65    ll3 -> COMA expresion ll3
Rule 66    expresion -> declaracion ex1
Rule 67    ex1 -> empty
Rule 68    ex1 -> CONDICIONY expresion
Rule 69    ex1 -> CONDICIONO expresion
Rule 70    declaracion -> exp de1
Rule 71    de1 -> empty
Rule 72    de1 -> de2 exp
Rule 73    de2 -> MAYQUE
Rule 74    de2 -> MENQUE
Rule 75    de2 -> IGUALQUE
Rule 76    de2 -> DIF
Rule 77    de2 -> MAYIGUALQUE
Rule 78    de2 -> MENIGUALQUE
Rule 79    exp -> termino exp1
Rule 80    exp1 -> empty
Rule 81    exp1 -> SUMA exp
Rule 82    exp1 -> RESTA exp
Rule 83    termino -> factor t1
Rule 84    t1 -> empty
Rule 85    t1 -> MULT termino
Rule 86    t1 -> DIV termino
Rule 87    factor -> f1 valor
Rule 88    factor -> PIZQ expresion PDER
Rule 89    f1 -> empty
Rule 90    f1 -> SUMA
Rule 91    f1 -> RESTA
Rule 92    funcion -> FUNCION fun1 ID parametros BIZQ fun2 BDER
Rule 93    fun1 -> tipo
Rule 94    fun1 -> VACIO
Rule 95    fun2 -> fun21 fun22
Rule 96    fun21 -> empty
Rule 97    fun21 -> estatuto fun21
Rule 98    fun22 -> empty
Rule 99    fun22 -> RETORNA expresion PUNTOYCOMA
Rule 100   bloque -> BIZQ b1 BDER
Rule 101   b1 -> empty
Rule 102   b1 -> estatuto b1
Rule 103   bloquesimple -> BIZQ bs1 BDER
Rule 104   bs1 -> empty
Rule 105   bs1 -> estatutosimple b1
Rule 106   asignacion -> ID a1 a2 IGUAL expresion PUNTOYCOMA
Rule 107   a1 -> empty
Rule 108   a1 -> PUNTO ID
Rule 109   a2 -> empty
Rule 110   a2 -> CIZQ expresion CDER
Rule 111   mientras -> MIENTRAS PIZQ expresion PDER bloquesimple
Rule 112   estatuto -> variables
Rule 113   estatuto -> EJEC llamarfunmet
Rule 114   estatuto -> ASIGNA asignacion
Rule 115   estatuto -> mientras
Rule 116   estatuto -> si
Rule 117   estatuto -> escritura
Rule 118   estatuto -> lectura
Rule 119   estatutosimple -> EJEC llamarfunmet
Rule 120   estatutosimple -> ASIGNA asignacion
Rule 121   estatutosimple -> mientras
Rule 122   estatutosimple -> si
Rule 123   estatutosimple -> escritura
Rule 124   estatutosimple -> lectura
Rule 125   escritura -> IMPRIMIR PIZQ expresion e1 PDER PUNTOYCOMA
Rule 126   e1 -> empty
Rule 127   e1 -> COMA expresion e1
Rule 128   lectura -> LEER PIZQ ID l1 l2 PDER PUNTOYCOMA
Rule 129   l1 -> empty
Rule 130   l1 -> PUNTO ID
Rule 131   l2 -> empty
Rule 132   l2 -> CIZQ expresion CDER
Rule 133   si -> SI PIZQ expresion PDER bloque si1
Rule 134   si1 -> empty
Rule 135   si1 -> O bloque
Rule 136   clases -> CLASE ID cl1 BIZQ atributos metodos BDER
Rule 137   cl1 -> empty
Rule 138   cl1 -> EXTIENDE ID
Rule 139   atributos -> ATRIBUTOS DOSPUNTOS atr1
Rule 140   atr1 -> empty
Rule 141   atr1 -> variables atr1
Rule 142   metodos -> METODOS DOSPUNTOS met1
Rule 143   met1 -> empty
Rule 144   met1 -> funcion met1
Rule 145   empty -> <empty>

Terminals, with rules where they appear

AMP                  : 56
ASIGNA               : 114 120
ATRIBUTOS            : 139
BDER                 : 8 92 100 103 136
BIZQ                 : 8 92 100 103 136
CDER                 : 25 28 40 110 132
CIZQ                 : 25 28 40 110 132
CLASE                : 136
COMA                 : 26 30 43 58 65 127
CONDICIONO           : 69
CONDICIONY           : 68
CTEDEC               : 34
CTEENT               : 25 33 40
CTETEXTO             : 35
DECIMAL              : 17 50
DIF                  : 76
DIV                  : 86
DOSPUNTOS            : 139 142
EJEC                 : 113 119
ENTERO               : 16 49
EXTIENDE             : 138
FUNCION              : 92
ID                   : 8 19 21 37 46 54 59 61 92 106 108 128 130 136 138
IGUAL                : 23 28 106
IGUALQUE             : 75
IMPRIMIR             : 125
LEER                 : 128
MAYIGUALQUE          : 77
MAYQUE               : 73
MENIGUALQUE          : 78
MENQUE               : 74
METODOS              : 142
MIENTRAS             : 111
MULT                 : 85
O                    : 135
PDER                 : 39 48 52 59 88 111 125 128 133
PIZQ                 : 39 48 52 59 88 111 125 128 133
PRINCIPAL            : 8
PUNTO                : 46 61 108 130
PUNTOYCOMA           : 15 20 59 99 106 125 128
RESTA                : 82 91
RETORNA              : 15 99
SI                   : 133
SUMA                 : 81 90
TEXTO                : 18 51
VACIO                : 10 94
error                : 

Nonterminals, with rules where they appear

a1                   : 106
a2                   : 106
asignacion           : 114 120
atr1                 : 139 141
atributos            : 136
b1                   : 100 102 105
bloque               : 133 135
bloquesimple         : 111
bs1                  : 103
cl1                  : 136
clases               : 3
de1                  : 70
de2                  : 72
declaracion          : 66
e1                   : 125 127
empty                : 2 4 6 12 14 22 29 31 38 42 44 47 53 55 57 60 62 64 67 71 80 84 89 96 98 101 104 107 109 126 129 131 134 137 140 143
escritura            : 117 123
estatuto             : 13 97 102
estatutosimple       : 105
ex1                  : 66
exp                  : 70 72 81 82
exp1                 : 79
expresion            : 15 39 43 48 63 65 68 69 88 99 106 110 111 125 127 132 133
f1                   : 87
factor               : 83
fun1                 : 92
fun2                 : 92
fun21                : 95 97
fun22                : 95
funcion              : 5 144
l1                   : 128
l2                   : 128
lectura              : 118 124
ll1                  : 59
ll2                  : 59
ll3                  : 63 65
llamarfunmet         : 113 119
met1                 : 142 144
metodos              : 136
mientras             : 115 121
p1                   : 1 3
p2                   : 1 5
p3                   : 1 7
pa1                  : 52 58
pa2                  : 54
pa3                  : 54
parametros           : 8 92
pr1                  : 8
pr2                  : 8
pr21                 : 11 13
pr22                 : 11
principal            : 1
programa             : 0
si                   : 116 122
si1                  : 133
t1                   : 83
termino              : 79 85 86
tipo                 : 20 93
tiposimple           : 9 54
v1                   : 20 26
v2                   : 21
v3                   : 24 32
v4                   : 25
v5                   : 28 30
v6                   : 23 27 28
va1                  : 37
va2                  : 39 43 48
va3                  : 40
va4                  : 41 45
va5                  : 46
valor                : 87
valordeclaracion     : 23 28 30 36
variables            : 7 112 141

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . p1 p2 p3 principal
    (2) p1 -> . empty
    (3) p1 -> . clases p1
    (145) empty -> .
    (136) clases -> . CLASE ID cl1 BIZQ atributos metodos BDER

    FUNCION         reduce using rule 145 (empty -> .)
    ENTERO          reduce using rule 145 (empty -> .)
    DECIMAL         reduce using rule 145 (empty -> .)
    TEXTO           reduce using rule 145 (empty -> .)
    ID              reduce using rule 145 (empty -> .)
    PRINCIPAL       reduce using rule 145 (empty -> .)
    CLASE           shift and go to state 1

    p1                             shift and go to state 4
    empty                          shift and go to state 3
    clases                         shift and go to state 2
    programa                       shift and go to state 5

state 1

    (136) clases -> CLASE . ID cl1 BIZQ atributos metodos BDER

    ID              shift and go to state 6


state 2

    (3) p1 -> clases . p1
    (2) p1 -> . empty
    (3) p1 -> . clases p1
    (145) empty -> .
    (136) clases -> . CLASE ID cl1 BIZQ atributos metodos BDER

    FUNCION         reduce using rule 145 (empty -> .)
    ENTERO          reduce using rule 145 (empty -> .)
    DECIMAL         reduce using rule 145 (empty -> .)
    TEXTO           reduce using rule 145 (empty -> .)
    ID              reduce using rule 145 (empty -> .)
    PRINCIPAL       reduce using rule 145 (empty -> .)
    CLASE           shift and go to state 1

    empty                          shift and go to state 3
    p1                             shift and go to state 7
    clases                         shift and go to state 2

state 3

    (2) p1 -> empty .

    FUNCION         reduce using rule 2 (p1 -> empty .)
    ENTERO          reduce using rule 2 (p1 -> empty .)
    DECIMAL         reduce using rule 2 (p1 -> empty .)
    TEXTO           reduce using rule 2 (p1 -> empty .)
    ID              reduce using rule 2 (p1 -> empty .)
    PRINCIPAL       reduce using rule 2 (p1 -> empty .)


state 4

    (1) programa -> p1 . p2 p3 principal
    (4) p2 -> . empty
    (5) p2 -> . funcion p2
    (145) empty -> .
    (92) funcion -> . FUNCION fun1 ID parametros BIZQ fun2 BDER

    ENTERO          reduce using rule 145 (empty -> .)
    DECIMAL         reduce using rule 145 (empty -> .)
    TEXTO           reduce using rule 145 (empty -> .)
    ID              reduce using rule 145 (empty -> .)
    PRINCIPAL       reduce using rule 145 (empty -> .)
    FUNCION         shift and go to state 11

    p2                             shift and go to state 8
    empty                          shift and go to state 9
    funcion                        shift and go to state 10

state 5

    (0) S' -> programa .



state 6

    (136) clases -> CLASE ID . cl1 BIZQ atributos metodos BDER
    (137) cl1 -> . empty
    (138) cl1 -> . EXTIENDE ID
    (145) empty -> .

    EXTIENDE        shift and go to state 14
    BIZQ            reduce using rule 145 (empty -> .)

    empty                          shift and go to state 12
    cl1                            shift and go to state 13

state 7

    (3) p1 -> clases p1 .

    FUNCION         reduce using rule 3 (p1 -> clases p1 .)
    ENTERO          reduce using rule 3 (p1 -> clases p1 .)
    DECIMAL         reduce using rule 3 (p1 -> clases p1 .)
    TEXTO           reduce using rule 3 (p1 -> clases p1 .)
    ID              reduce using rule 3 (p1 -> clases p1 .)
    PRINCIPAL       reduce using rule 3 (p1 -> clases p1 .)


state 8

    (1) programa -> p1 p2 . p3 principal
    (6) p3 -> . empty
    (7) p3 -> . variables p3
    (145) empty -> .
    (20) variables -> . tipo v1 PUNTOYCOMA
    (16) tipo -> . ENTERO
    (17) tipo -> . DECIMAL
    (18) tipo -> . TEXTO
    (19) tipo -> . ID

    PRINCIPAL       reduce using rule 145 (empty -> .)
    ENTERO          shift and go to state 19
    DECIMAL         shift and go to state 21
    TEXTO           shift and go to state 17
    ID              shift and go to state 16

    variables                      shift and go to state 15
    p3                             shift and go to state 20
    tipo                           shift and go to state 18
    empty                          shift and go to state 22

state 9

    (4) p2 -> empty .

    ENTERO          reduce using rule 4 (p2 -> empty .)
    DECIMAL         reduce using rule 4 (p2 -> empty .)
    TEXTO           reduce using rule 4 (p2 -> empty .)
    ID              reduce using rule 4 (p2 -> empty .)
    PRINCIPAL       reduce using rule 4 (p2 -> empty .)


state 10

    (5) p2 -> funcion . p2
    (4) p2 -> . empty
    (5) p2 -> . funcion p2
    (145) empty -> .
    (92) funcion -> . FUNCION fun1 ID parametros BIZQ fun2 BDER

    ENTERO          reduce using rule 145 (empty -> .)
    DECIMAL         reduce using rule 145 (empty -> .)
    TEXTO           reduce using rule 145 (empty -> .)
    ID              reduce using rule 145 (empty -> .)
    PRINCIPAL       reduce using rule 145 (empty -> .)
    FUNCION         shift and go to state 11

    p2                             shift and go to state 23
    empty                          shift and go to state 9
    funcion                        shift and go to state 10

state 11

    (92) funcion -> FUNCION . fun1 ID parametros BIZQ fun2 BDER
    (93) fun1 -> . tipo
    (94) fun1 -> . VACIO
    (16) tipo -> . ENTERO
    (17) tipo -> . DECIMAL
    (18) tipo -> . TEXTO
    (19) tipo -> . ID

    VACIO           shift and go to state 26
    ENTERO          shift and go to state 19
    DECIMAL         shift and go to state 21
    TEXTO           shift and go to state 17
    ID              shift and go to state 16

    tipo                           shift and go to state 25
    fun1                           shift and go to state 24

state 12

    (137) cl1 -> empty .

    BIZQ            reduce using rule 137 (cl1 -> empty .)


state 13

    (136) clases -> CLASE ID cl1 . BIZQ atributos metodos BDER

    BIZQ            shift and go to state 27


state 14

    (138) cl1 -> EXTIENDE . ID

    ID              shift and go to state 28


state 15

    (7) p3 -> variables . p3
    (6) p3 -> . empty
    (7) p3 -> . variables p3
    (145) empty -> .
    (20) variables -> . tipo v1 PUNTOYCOMA
    (16) tipo -> . ENTERO
    (17) tipo -> . DECIMAL
    (18) tipo -> . TEXTO
    (19) tipo -> . ID

    PRINCIPAL       reduce using rule 145 (empty -> .)
    ENTERO          shift and go to state 19
    DECIMAL         shift and go to state 21
    TEXTO           shift and go to state 17
    ID              shift and go to state 16

    variables                      shift and go to state 15
    empty                          shift and go to state 22
    tipo                           shift and go to state 18
    p3                             shift and go to state 29

state 16

    (19) tipo -> ID .

    ID              reduce using rule 19 (tipo -> ID .)


state 17

    (18) tipo -> TEXTO .

    ID              reduce using rule 18 (tipo -> TEXTO .)


state 18

    (20) variables -> tipo . v1 PUNTOYCOMA
    (21) v1 -> . ID v2

    ID              shift and go to state 31

    v1                             shift and go to state 30

state 19

    (16) tipo -> ENTERO .

    ID              reduce using rule 16 (tipo -> ENTERO .)


state 20

    (1) programa -> p1 p2 p3 . principal
    (8) principal -> . PRINCIPAL pr1 ID parametros BIZQ pr2 BDER

    PRINCIPAL       shift and go to state 33

    principal                      shift and go to state 32

state 21

    (17) tipo -> DECIMAL .

    ID              reduce using rule 17 (tipo -> DECIMAL .)


state 22

    (6) p3 -> empty .

    PRINCIPAL       reduce using rule 6 (p3 -> empty .)


state 23

    (5) p2 -> funcion p2 .

    ENTERO          reduce using rule 5 (p2 -> funcion p2 .)
    DECIMAL         reduce using rule 5 (p2 -> funcion p2 .)
    TEXTO           reduce using rule 5 (p2 -> funcion p2 .)
    ID              reduce using rule 5 (p2 -> funcion p2 .)
    PRINCIPAL       reduce using rule 5 (p2 -> funcion p2 .)


state 24

    (92) funcion -> FUNCION fun1 . ID parametros BIZQ fun2 BDER

    ID              shift and go to state 34


state 25

    (93) fun1 -> tipo .

    ID              reduce using rule 93 (fun1 -> tipo .)


state 26

    (94) fun1 -> VACIO .

    ID              reduce using rule 94 (fun1 -> VACIO .)


state 27

    (136) clases -> CLASE ID cl1 BIZQ . atributos metodos BDER
    (139) atributos -> . ATRIBUTOS DOSPUNTOS atr1

    ATRIBUTOS       shift and go to state 35

    atributos                      shift and go to state 36

state 28

    (138) cl1 -> EXTIENDE ID .

    BIZQ            reduce using rule 138 (cl1 -> EXTIENDE ID .)


state 29

    (7) p3 -> variables p3 .

    PRINCIPAL       reduce using rule 7 (p3 -> variables p3 .)


state 30

    (20) variables -> tipo v1 . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 37


state 31

    (21) v1 -> ID . v2
    (22) v2 -> . empty
    (23) v2 -> . IGUAL valordeclaracion v6
    (24) v2 -> . v3
    (25) v2 -> . CIZQ CTEENT CDER v4
    (145) empty -> .
    (26) v3 -> . COMA v1

    IGUAL           shift and go to state 43
    CIZQ            shift and go to state 42
    PUNTOYCOMA      reduce using rule 145 (empty -> .)
    COMA            shift and go to state 38

    empty                          shift and go to state 41
    v2                             shift and go to state 39
    v3                             shift and go to state 40

state 32

    (1) programa -> p1 p2 p3 principal .

    $end            reduce using rule 1 (programa -> p1 p2 p3 principal .)


state 33

    (8) principal -> PRINCIPAL . pr1 ID parametros BIZQ pr2 BDER
    (9) pr1 -> . tiposimple
    (10) pr1 -> . VACIO
    (49) tiposimple -> . ENTERO
    (50) tiposimple -> . DECIMAL
    (51) tiposimple -> . TEXTO

    VACIO           shift and go to state 47
    ENTERO          shift and go to state 44
    DECIMAL         shift and go to state 49
    TEXTO           shift and go to state 46

    tiposimple                     shift and go to state 48
    pr1                            shift and go to state 45

state 34

    (92) funcion -> FUNCION fun1 ID . parametros BIZQ fun2 BDER
    (52) parametros -> . PIZQ pa1 PDER

    PIZQ            shift and go to state 51

    parametros                     shift and go to state 50

state 35

    (139) atributos -> ATRIBUTOS . DOSPUNTOS atr1

    DOSPUNTOS       shift and go to state 52


state 36

    (136) clases -> CLASE ID cl1 BIZQ atributos . metodos BDER
    (142) metodos -> . METODOS DOSPUNTOS met1

    METODOS         shift and go to state 54

    metodos                        shift and go to state 53

state 37

    (20) variables -> tipo v1 PUNTOYCOMA .

    ENTERO          reduce using rule 20 (variables -> tipo v1 PUNTOYCOMA .)
    DECIMAL         reduce using rule 20 (variables -> tipo v1 PUNTOYCOMA .)
    TEXTO           reduce using rule 20 (variables -> tipo v1 PUNTOYCOMA .)
    ID              reduce using rule 20 (variables -> tipo v1 PUNTOYCOMA .)
    METODOS         reduce using rule 20 (variables -> tipo v1 PUNTOYCOMA .)
    PRINCIPAL       reduce using rule 20 (variables -> tipo v1 PUNTOYCOMA .)
    EJEC            reduce using rule 20 (variables -> tipo v1 PUNTOYCOMA .)
    ASIGNA          reduce using rule 20 (variables -> tipo v1 PUNTOYCOMA .)
    MIENTRAS        reduce using rule 20 (variables -> tipo v1 PUNTOYCOMA .)
    SI              reduce using rule 20 (variables -> tipo v1 PUNTOYCOMA .)
    IMPRIMIR        reduce using rule 20 (variables -> tipo v1 PUNTOYCOMA .)
    LEER            reduce using rule 20 (variables -> tipo v1 PUNTOYCOMA .)
    BDER            reduce using rule 20 (variables -> tipo v1 PUNTOYCOMA .)
    RETORNA         reduce using rule 20 (variables -> tipo v1 PUNTOYCOMA .)


state 38

    (26) v3 -> COMA . v1
    (21) v1 -> . ID v2

    ID              shift and go to state 31

    v1                             shift and go to state 55

state 39

    (21) v1 -> ID v2 .

    PUNTOYCOMA      reduce using rule 21 (v1 -> ID v2 .)


state 40

    (24) v2 -> v3 .

    PUNTOYCOMA      reduce using rule 24 (v2 -> v3 .)


state 41

    (22) v2 -> empty .

    PUNTOYCOMA      reduce using rule 22 (v2 -> empty .)


state 42

    (25) v2 -> CIZQ . CTEENT CDER v4

    CTEENT          shift and go to state 56


state 43

    (23) v2 -> IGUAL . valordeclaracion v6
    (33) valordeclaracion -> . CTEENT
    (34) valordeclaracion -> . CTEDEC
    (35) valordeclaracion -> . CTETEXTO

    CTEENT          shift and go to state 58
    CTEDEC          shift and go to state 59
    CTETEXTO        shift and go to state 60

    valordeclaracion               shift and go to state 57

state 44

    (49) tiposimple -> ENTERO .

    AMP             reduce using rule 49 (tiposimple -> ENTERO .)
    ID              reduce using rule 49 (tiposimple -> ENTERO .)


state 45

    (8) principal -> PRINCIPAL pr1 . ID parametros BIZQ pr2 BDER

    ID              shift and go to state 61


state 46

    (51) tiposimple -> TEXTO .

    AMP             reduce using rule 51 (tiposimple -> TEXTO .)
    ID              reduce using rule 51 (tiposimple -> TEXTO .)


state 47

    (10) pr1 -> VACIO .

    ID              reduce using rule 10 (pr1 -> VACIO .)


state 48

    (9) pr1 -> tiposimple .

    ID              reduce using rule 9 (pr1 -> tiposimple .)


state 49

    (50) tiposimple -> DECIMAL .

    AMP             reduce using rule 50 (tiposimple -> DECIMAL .)
    ID              reduce using rule 50 (tiposimple -> DECIMAL .)


state 50

    (92) funcion -> FUNCION fun1 ID parametros . BIZQ fun2 BDER

    BIZQ            shift and go to state 62


state 51

    (52) parametros -> PIZQ . pa1 PDER
    (53) pa1 -> . empty
    (54) pa1 -> . tiposimple pa2 ID pa3
    (145) empty -> .
    (49) tiposimple -> . ENTERO
    (50) tiposimple -> . DECIMAL
    (51) tiposimple -> . TEXTO

    PDER            reduce using rule 145 (empty -> .)
    ENTERO          shift and go to state 44
    DECIMAL         shift and go to state 49
    TEXTO           shift and go to state 46
